# crypto-trading

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  settings.example.toml  setup.py
agents/: __init__.py  networks.py  ppo_agent.py  replay_buffer.py
config/: __init__.py  config.py  dev.yaml  hyperparams.py  okx.yaml  prod.yaml
data/: __init__.py  data_loader.py  feature_engineer.py  okx_provider.py  preprocessor.py
docs/: API.md  ARCHITECTURE.md
envs/: __init__.py  crypto_env.py
evaluation/: __init__.py  backtest.py  metrics.py  visualizer.py
inference/: __init__.py  predictor.py  risk_manager.py
notebooks/: __init__.py
scripts/: backtest.py  continuous_train.sh  download_okx_history.py  evaluate.py  quickstart.py  stream_okx_data.py  train.py
tests/: test_agent.py  test_backtest.py  test_env.py
training/: __init__.py  callbacks.py  trainer.py
